--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
                     <form class="gform" action="https://script.google.com/macros/s/AKfycbzDh7uvQCkpAaqwhVHZibwiZWhTfDUXD2KAr6Mi-Q/exec" method="post" enctype="text/plain">
                         <div class="inputbox">
                             <label for="name">User Name</label>
-                            <input id="name" type="text" placeholder="Full Name" required name="name">
+                            <input id="name" type="text" placeholder="Full Name" required name="name" autofocus>
                         </div>
                         <div class="inputbox">
                             <label for="contact">User Mobile Num</label>
